[package]
name = "im-platform-contracts"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
sdkwork-im-contract-admin = { path = "../sdkwork-im-contract-admin" }
sdkwork-im-contract-agent = { path = "../sdkwork-im-contract-agent" }
sdkwork-im-contract-control = { path = "../sdkwork-im-contract-control" }
sdkwork-im-contract-core = { path = "../sdkwork-im-contract-core" }
sdkwork-im-contract-message = { path = "../sdkwork-im-contract-message" }
sdkwork-im-contract-notification = { path = "../sdkwork-im-contract-notification" }
sdkwork-im-contract-stream = { path = "../sdkwork-im-contract-stream" }
im-domain-core = { path = "../im-domain-core" }
im-domain-events = { path = "../im-domain-events" }
im-time = { path = "../im-time" }
sdkwork-rtc-core.workspace = true
serde.workspace = true

[dev-dependencies]
sdkwork-im-ccp-binding-http = { path = "../sdkwork-im-ccp-binding-http" }
sdkwork-im-ccp-binding-mqtt = { path = "../sdkwork-im-ccp-binding-mqtt" }
sdkwork-im-ccp-binding-sse = { path = "../sdkwork-im-ccp-binding-sse" }
sdkwork-im-ccp-binding-ws = { path = "../sdkwork-im-ccp-binding-ws" }
sdkwork-im-ccp-codec = { path = "../sdkwork-im-ccp-codec" }
sdkwork-im-ccp-codec-cbor = { path = "../sdkwork-im-ccp-codec-cbor" }
sdkwork-im-ccp-codec-json = { path = "../sdkwork-im-ccp-codec-json" }
sdkwork-im-ccp-control = { path = "../sdkwork-im-ccp-control" }
sdkwork-im-ccp-core = { path = "../sdkwork-im-ccp-core" }
sdkwork-im-ccp-registry = { path = "../sdkwork-im-ccp-registry" }
serde_json.workspace = true
