[package]
name = "sdkwork-api-product-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8.6"
bytes = "1"
im-adapters-local-disk = { path = "../../adapters/local-disk" }
im-storage-contracts = { path = "../im-storage-contracts" }
im-storage-runtime = { path = "../im-storage-runtime" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sdkwork-api-config = { path = "../sdkwork-api-config" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
