[package]
name = "sdkwork-im-ccp-binding-tcp"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
sdkwork-im-ccp-codec = { path = "../sdkwork-im-ccp-codec" }
sdkwork-im-ccp-core = { path = "../sdkwork-im-ccp-core" }

[dev-dependencies]
sdkwork-im-ccp-codec-json = { path = "../sdkwork-im-ccp-codec-json" }
