[package]
name = "sdkwork-im-iam-application-bootstrap"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Ensure Sdkwork IM IAM tenant applications through the shared embedded bootstrap framework."

[lib]
name = "sdkwork_im_iam_application_bootstrap"
path = "src/lib.rs"

[dependencies]
sdkwork_iam_database_host = { workspace = true }
sdkwork_iam_embedded_application_bootstrap = { workspace = true }
sqlx = { workspace = true }
